I think I got pascal_program to start working with Queues rather than lists (=0 testing).  In the process, I think I cleaned up my code, by removing the need for iterator.previous calls by using more appropriate Queue.peek() calls in the first place. I think at this point, If I add a little code to make the grouper and tree generator work at the same time, then it will be done (fingers crossed).  I got it all working before, hopefully these new changes don't break anything.
git-svn-id: https://pascalinterpreterinjava.googlecode.com/svn/trunk@47 fb5b4802-194b-0410-9e11-5134f6b347ec