@@ -27,12 +27,11 @@ public class variable_access implements returns_value {
 	}
 
 	public Class get_type(pascal_program p, function_declaration f) {
-		Class type=f.get_variable_type(variable_name.getFirst());
+		Class type=f.get_variable_type(variable_name.get(0));
 		for(int i=1; i<variable_name.size(); i++) {
 			try {
 				type=type.getField(variable_name.get(i)).getType();
 			} catch (NoSuchFieldException e) {
-				// TODO Auto-generated catch block
 				e.printStackTrace();
 			}
 		}
